@@ -39,6 +39,7 @@ import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.shard.DocsStats;
+import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
@@ -116,6 +117,7 @@ public class TransportRolloverAction extends TransportMasterNodeAction<RolloverR
         final ActionListener<RolloverResponse> listener
     ) throws Exception {
 
+        assert task instanceof CancellableTask;
         Metadata metadata = oldState.metadata();
 
         IndicesStatsRequest statsRequest = new IndicesStatsRequest().indices(rolloverRequest.getRolloverTarget())
@@ -164,7 +166,7 @@ public class TransportRolloverAction extends TransportMasterNodeAction<RolloverR
                     .values()
                     .stream()
                     .filter(condition -> trialConditionResults.get(condition.toString()))
-                    .collect(Collectors.toList());
+                    .toList();
 
                 final RolloverResponse trialRolloverResponse = new RolloverResponse(
                     trialSourceIndexName,
@@ -373,23 +375,24 @@ public class TransportRolloverAction extends TransportMasterNodeAction<RolloverR
         }
 
         @Override
-        public ClusterTasksResult<RolloverTask> execute(ClusterState currentState, List<RolloverTask> tasks) throws Exception {
-            ClusterStateTaskExecutor.ClusterTasksResult.Builder<RolloverTask> builder = ClusterStateTaskExecutor.ClusterTasksResult
-                .builder();
+        public ClusterState execute(ClusterState currentState, List<TaskContext<RolloverTask>> taskContexts) throws Exception {
             ClusterState state = currentState;
-            for (RolloverTask task : tasks) {
+            for (final var taskContext : taskContexts) {
                 try {
+                    final var task = taskContext.getTask();
                     state = task.performRollover(state);
-                    builder.success(task, new LegacyClusterTaskResultActionListener(task, currentState));
+                    taskContext.success(new LegacyClusterTaskResultActionListener(task, currentState));
                 } catch (Exception e) {
-                    builder.failure(task, e);
+                    taskContext.onFailure(e);
                 }
             }
 
             if (state != currentState) {
                 var reason = new StringBuilder();
                 Strings.collectionToDelimitedStringWithLimit(
-                    (Iterable<String>) () -> tasks.stream().map(t -> t.sourceIndex.get() + "->" + t.rolloverIndex.get()).iterator(),
+                    (Iterable<String>) () -> taskContexts.stream()
+                        .map(t -> t.getTask().sourceIndex.get() + "->" + t.getTask().rolloverIndex.get())
+                        .iterator(),
                     ",",
                     "bulk rollover [",
                     "]",
@@ -398,7 +401,7 @@ public class TransportRolloverAction extends TransportMasterNodeAction<RolloverR
                 );
                 state = allocationService.reroute(state, reason.toString());
             }
-            return builder.build(state);
+            return state;
         }
     }
 }
